--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -528,8 +528,6 @@ video {
 	margin-bottom: 0.25rem;
 }.mt-auto{
 	margin-top: auto;
-}.mb-3{
-	margin-bottom: 0.75rem;
 }.block{
 	display: block;
 }.inline-block{
@@ -592,8 +590,6 @@ video {
 	width: 1rem;
 }.w-5\/6{
 	width: 83.333333%;
-}.w-auto{
-	width: auto;
 }.min-w-full{
 	min-width: 100%;
 }.max-w-full{
@@ -760,6 +756,9 @@ video {
 	background-color: #ffffff0d;
 }.bg-transparent{
 	background-color: transparent;
+}.bg-\[\#030239\]{
+	--tw-bg-opacity: 1;
+	background-color: rgba(3, 2, 57, var(--tw-bg-opacity));
 }.bg-indigo-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
@@ -787,9 +786,6 @@ video {
 }.bg-gray-800{
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}.bg-\[\#030239\]{
-	--tw-bg-opacity: 1;
-	background-color: rgba(3, 2, 57, var(--tw-bg-opacity));
 }.bg-blue-600{
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
@@ -843,24 +839,27 @@ video {
 }.px-16{
 	padding-left: 4rem;
 	padding-right: 4rem;
-}.py-4{
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-}.px-6{
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+}.py-2{
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
 }.px-2{
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }.py-3{
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
-}.px-4{
-	padding-left: 1rem;
-	padding-right: 1rem;
+}.py-4{
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }.px-8{
 	padding-left: 2rem;
 	padding-right: 2rem;
+}.px-6{
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }.px-0{
 	padding-left: 0px;
 	padding-right: 0px;
@@ -870,9 +869,6 @@ video {
 }.py-52{
 	padding-top: 13rem;
 	padding-bottom: 13rem;
-}.py-2{
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
 }.pr-4{
 	padding-right: 1rem;
 }.pt-8{
@@ -3917,9 +3913,6 @@ textarea:required {
 	cursor: pointer;
 }.hover\:border-solid:hover{
 	border-style: solid;
-}.hover\:border-blue-700:hover{
-	--tw-border-opacity: 1;
-	border-color: rgba(29, 78, 216, var(--tw-border-opacity));
 }.hover\:border-red-400:hover{
 	--tw-border-opacity: 1;
 	border-color: rgba(248, 113, 113, var(--tw-border-opacity));
@@ -3938,13 +3931,10 @@ textarea:required {
 }.hover\:bg-blue-600:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
-}.hover\:bg-blue-50:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
-}.hover\:bg-blue-700:hover{
+}.hover\:hover\:bg-blue-700:hover:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
-}.hover\:hover\:bg-blue-700:hover:hover{
+}.hover\:bg-blue-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
 }.hover\:text-\[\#f17674\]:hover{
@@ -3953,12 +3943,6 @@ textarea:required {
 }.hover\:text-white:hover{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}.hover\:text-gray-500:hover{
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}.hover\:text-blue-600:hover{
-	--tw-text-opacity: 1;
-	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }.hover\:text-blue-50:hover{
 	--tw-text-opacity: 1;
 	color: rgba(239, 246, 255, var(--tw-text-opacity));
@@ -4085,6 +4069,8 @@ textarea:required {
 		--tw-space-x-reverse: 0;
 		margin-right: calc(1.5rem * var(--tw-space-x-reverse));
 		margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+	}.lg\:bg-\[\#ffffff0d\]{
+		background-color: #ffffff0d;
 	}.lg\:p-4{
 		padding: 1rem;
 	}.lg\:px-4{
