--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -4076,6 +4076,9 @@ textarea:required {
 	}.lg\:px-4{
 		padding-left: 1rem;
 		padding-right: 1rem;
+	}.lg\:py-2{
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
 	}.lg\:pt-4{
 		padding-top: 1rem;
 	}
